// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`validate&transform > classToPlain 1`] = `
{
  "name": "phecda",
}
`;

exports[`validate&transform > classToValue 1`] = `
{
  "name": "phecda",
}
`;

exports[`validate&transform > extend 1`] = `
{
  "name": "phecda11",
}
`;

exports[`validate&transform > plainToClass 1`] = `
Parent {
  "name": "phecda11",
  "testId": undefined,
}
`;

exports[`validate&transform > plainToClass 2`] = `
Parent {
  "name": "phecda",
  "testId": undefined,
}
`;

exports[`validate&transform > plainToClass 3`] = `
Parent {
  "name": undefined,
  "testId": undefined,
}
`;

exports[`validate&transform > use function to add decorator 1`] = `
[
  "name",
]
`;
